--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<link rel="stylesheet" href="styles/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/styles.css">
 	<link rel="stylesheet" href="styles/circle.css">
+	<link rel="stylesheet" href="styles/jquery.fancybox.css" type="text/css" media="screen" />
 	<script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
+	<script type="text/javascript" src="js/jquery.fancybox.pack.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/sections-controler.js"></script>
+	<script type="text/javascript" src="js/pictures-viewer.js"></script>
 	<script type="text/javascript" src="js/submit-form.js"></script>
 	<title>Olya Slisarchuk</title>
 </head>
@@ -37,7 +40,7 @@
 				<h3>Hello everyone!</h3>
 				<p>My name is Olya and I am beginner front-end developer.
 					<br>If you are interested to get me better you are welcome to check my resume</p>
-				<a href="resources/cv.pdf" download>Download my CV</a>
+				<a class="button" href="resources/cv.pdf" download>Download my CV</a>
 			</div>
 			<div id="education">
 				<h2>Education</h2>
@@ -67,15 +70,31 @@
 			<div id="interests">
 				<h2>Interests</h2>
 				<figure>
-					<img class="interests" src="img/books.jpg" alt="Books">
-					<img class="interests" src="img/volunteer.jpg" alt="Volunteer">
-					<img class="interests" src="img/games.jpg" alt="Games">
-					<img class="interests" src="img/reading.jpg" alt="Reding in the park">
+					<a class="fancybox" rel="gallery1" href="img/books.jpg" title="Small part of my books">
+						<img class="interests" src="img/books.jpg" alt="Books">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/volunteer.jpg" title="Volunteer at EURO2012">
+						<img class="interests" src="img/volunteer.jpg" alt="Volunteer">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/games.jpg" title="My favourite board games">
+						<img class="interests" src="img/games.jpg" alt="Games">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/reading.jpg" title="The best place for reading">
+						<img class="interests" src="img/reading.jpg" alt="Reding in the park">
+					</a>
 					<br>
-					<img class="interests" src="img/concert.jpg" alt="OE concert">
-					<img class="interests" src="img/music.jpg" alt="Music">
-					<img class="interests" src="img/mountains.jpg" alt="Traveling">
-					<img class="interests" src="img/owl.jpg" alt="Cross-stitching">
+					<a class="fancybox" rel="gallery1" href="img/concert.jpg" title="The best concert ever">
+						<img class="interests" src="img/concert.jpg" alt="OE concert">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/music.jpg" title="They help me to listen OE">
+						<img class="interests" src="img/music.jpg" alt="Music">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/mountains.jpg" title="What can be better than traveling">
+						<img class="interests" src="img/mountains.jpg" alt="Traveling">
+					</a>
+					<a class="fancybox" rel="gallery1" href="img/owl.jpg" title="Cross-stitched tiny owl">
+						<img class="interests" src="img/owl.jpg" alt="Cross-stitching">
+					</a>
 				</figure>
 			</div>
 			<div id="skills">
@@ -109,31 +128,31 @@
 								<div class="fill"></div>
 							</div>
 						</div>
-						
+
 					</div>
 				</div>
 				<div id="languages">
 					<h3>Languages</h3>
 					<dl>
 						<div class="lang">
-						<dt> Ukrainian: native</dt>
-						<dd>
-							<progress value="100" max="100"></progress>
-						</dd>
-						<dt> English: C1 </dt>
-						<dd>
-							<progress value="80" max="100"></progress>
-						</dd>
+							<dt> Ukrainian: native</dt>
+							<dd>
+								<progress value="100" max="100"></progress>
+							</dd>
+							<dt> English: C1 </dt>
+							<dd>
+								<progress value="80" max="100"></progress>
+							</dd>
 						</div>
 						<div class="lang">
-						<dt> Russian: B2 </dt>
-						<dd>
-							<progress value="70" max="100"></progress>
-						</dd>
-						<dt> German: A2 </dt>
-						<dd>
-							<progress value="30" max="100"></progress>
-						</dd>
+							<dt> Russian: B2 </dt>
+							<dd>
+								<progress value="70" max="100"></progress>
+							</dd>
+							<dt> German: A2 </dt>
+							<dd>
+								<progress value="30" max="100"></progress>
+							</dd>
 						</div>
 					</dl>
 				</div>
@@ -155,7 +174,7 @@
 							<textarea name="message" id="msg" rows="5" cols="30" placeholder="Your message" required></textarea>
 							<br>
 							<br>
-							<input type="submit" id="send" value="Send">
+							<input class="button" type="submit" id="send" value="Send message">
 						</form>
 					</div>
 					<div id="my-contacts">
@@ -173,7 +192,7 @@
 			</div>
 		</section>
 		<footer>
-			<p>Contact me:
+			<p><span>Contacts:</span>
 				<a href="https://www.facebook.com/olya.korchan" target="_blank"><img src="img/fb.png" alt="fb icon"></a>
 				<a href="https://plus.google.com/u/0/100080983472793085400" target="_blank"><img src="img/google+.png" alt="google+ icon"></a>
 				<a href="https://www.linkedin.com/in/olya-korchan-8b640737?trk=nav_responsive_tab_profile" target="_blank"><img src="img/linkedin.png" alt="linkedin icon"></a>
