responcive for mobile phones

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" />
 	<link rel="stylesheet" href="styles/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/styles.css">
+	<link rel="stylesheet" media="(max-width: 500px)" href="styles/mobile.css">
 	<link rel="stylesheet" href="styles/circle.css">
 	<link rel="stylesheet" href="styles/jquery.fancybox.css" type="text/css" media="screen" />
 	<script src="//code.jquery.com/jquery-2.2.2.min.js"></script>
@@ -40,7 +42,7 @@
 				<h3>Hello everyone!</h3>
 				<p>My name is Olya and I am beginner front-end developer.
 					<br>If you are interested to get me better you are welcome to check my resume</p>
-				<a class="button" href="resources/cv.pdf" download>Download my CV</a>
+				<div><a class="button" href="resources/cv.pdf" download>Download my CV</a></div>
 			</div>
 			<div id="education">
 				<h2>Education</h2>
